--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-Dean's blog
-Empty
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>index</title>
+    <style>
+        body{
+            text-align: center;
+        }
+    </style>
+</head>
+<body>
+    <h1>404 Not Found</h1>
+    <h5>(Fake)</h5>
+</body>
+</html>
